# d1-lavidao

./: .gitignore  README.md  env.yml  interleaved_inferencer.py  pyproject.toml  ref_Run.sh  run_lmms-eval.sh
LaVida-O/: .gitignore  README.md  download_checkpoint.py
LaVida-O/config/data/: debug_dataset.yaml  s1_und_gnd_data.yaml  s2_t2i_pretrain.yaml  s3_interleaved.yaml
LaVida-O/data/: imagedit
LaVida-O/eval/: run.sh  run_grounding.sh
LaVida-O/eval/lmms_eval/: evaluator.py
LaVida-O/eval_img/: dpg.sh  dpg_utils.py  eval.py  eval_imgedit.py  geneval.sh  geneval_utils.py  imgedit-eval.sh
LaVida-O/llava/: mm_utils.py
LaVida-O/llava/eval/: 1024_eval.yaml  demo_utils.py  evaluate_interleave.py  predict_t2i_edit.py  rollout.py
LaVida-O/llava/model/: __init__.py  llava_arch.py
LaVida-O/llava/serve/: controller.py  gradio_web_server.py  register_worker.py  (+1 more)
MMaDA-Parallel-M/: infer_all.py  infer_t2i_grid.py  run_infer_all.sh  run_infer_t2i_grid.sh  run_train_8gpu.sh  run_train_interleave.sh  run_train_smoke.sh
MMaDA-Parallel-M/configs/: mmada_interleave_thinkmorph_zebracot.yaml
MMaDA-Parallel-M/training/: prompting_utils.py  train_interleave.py
SFT/: ddp_config.yaml  sft_train.py  sft_trainer.py
data/: DATA.md
diffu-grpo/: accelerate.yaml  data_utils.py  diffu_grpo_config.py  diffu_grpo_train.py  diffu_grpo_trainer.py  mmada_grpo_trainer.py  reward_func.py  run.sh  run_mmada.sh  test_sampling_config.py  test_thinkmorph_answer.py
diffu-grpo/slurm_scripts/: code_base.sbatch  countdown_base.sbatch  countdown_sft.sbatch  gsm_base.sbatch  gsm_sft.sbatch  math_base.sbatch  math_sft.sbatch  sudoku_base.sbatch  sudoku_sft.sbatch  train.yaml
eval/: refcoco_eval.py  regrade_gpt_score.py  regrade_mathvista.py  run.sh
eval/lmms_eval/: __main__.py  evaluator.py
llava/eval/: 1024_eval_edit.yaml  256_eval.yaml  model_vqa.py  predict_grounding.py  predict_t2i_edit.py  rollout.py
llava/model/: builder.py  consolidate.py  llava_arch.py  make_delta.py
llava/serve/: cli.py  gradio_multi_image.py  model_worker.py  sglang_worker.py
llava/train/: llava_eval_trainer.py  llava_trainer.py  test_data.py
(+57 files in other folders)
